--- a/todo.html
+++ b/todo.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.html">
-    <link rel="stylesheet" href="frontpage.html">
+    <link rel="stylesheet" href="homepage.html">
     <link rel="stylesheet" href="todo.html">
 
 
@@ -19,9 +19,9 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
                 <div id="demo">
-                    <a class="navbar-brand" href="index.html">Home Page</a>
+                    <a class="navbar-brand" href="homepage.html">Home Page</a>
                     <a class="navbar-brand" href="todo.html">To-do List</a>
-                    <a class="navbar-brand" href="frontpage.html">logout</a>
+                    <a class="navbar-brand" href="index.html">logout</a>
                 </div>
             </div>
         </nav>
