--- a/index.html
+++ b/index.html
@@ -13,56 +13,30 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-
 </head>
-<!-- header -->
+<body class="index">
+    <div class="container">
+        <div class="row">
+            
+    <div class="login-page" id="loginform">
+        <div class="form">
+            <h3 class="text-left mb-3">To-do App login</h3>
+            <label for="Username">Username</label>
+            <br>
+            <input type="text" id="username" class="input-field" required/>
 
-<nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="images/download.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            ToDoIt
-        </a>
-    </div>
-</nav>
+            <br>
+            <br>
+            <label for="password">Password</label>
+            <br>
+            <input type="password" id="pwd" class="input-field" required>
 
-<!-- header ends -->
-<div class="container">
-    <div class="row">
-        <div class="textall col-sm-12 col-md-8 col-lg-5 col-xl-8 text-white">
-            <img class="about" src="images/homeimg.jpg" alt="">
-        </div>
-        <div class="col col-sm-12 col-md-8 col-lg-5 col-xl-4 ">
-            <h2 class="text-center" id="head">Organize your work and life, finally.</h2>
-                <h5 class="text-primary">Become focused, organized, and calm with ToDoIt. The world’s best to-do list app.</h5>
-               
-            <form class="formlog p-5">
-                <h3 class="text-center">Log In</h3>
-                <div class="mb-3">
-                    <label for="Username">Username</label>
-                    <input type="text" id="username" class="input-field">
-                </div>
-                <div class="mb-3">
-                    <label for="password">Password</label><br>
-                    <input type="password" id="pwd" class="input-field">
-                </div>
-             <br>
-
-                <button class="logbtn" type="login-button" onclick="login(todopage)">LogIn</button>
-            </form>
-        </div>
+            <br>
+            <br>
+            <button class type="login-button" onclick="login(todopage)">Log In</button>
+        </form>
     </div>
 </div>
-<!--login form end-->
-<!-- footer -->
-<br>
-<footer id="sticky-footer" class="flex-shrink-0 py-4 bg-body-tertiary bg-opacity-30 h=5 text-tertiary-10">
-    <!-- <div class="foot container text-center"> -->
-    <p class="text-center">Copyright &copy; ToDoIt-app</p>
-    <!-- </div> -->
-</footer>
-<!-- footer ends -->
-<script src="todo.js"></script>
+<script src="/todo.js"></script>
 </body>
-
 </html>
